<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_help"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.evan.caklontonggg.HelpsActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:gravity="center"
                android:text="@string/isi"
                android:textSize="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/isi"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:text="@string/tidak"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tidak" />

                <Button
                    android:text="@string/ya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ya"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
