<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.evan.caklontonggg.MainActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:gravity="center"
                android:textSize="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/soal"
                />

            <TextView
                android:gravity="center"
                android:textSize="26dp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hasil"
                />

            <EditText
                android:gravity="center"
                android:textSize="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Jawaban"
                android:ems="10"
                android:id="@+id/jawab"
                />

            <Button
                android:text="@string/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submit" />

            <Button
                android:text="@string/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/help" />

            <Button
                android:text="@string/lanjut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lanjut"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>